save request now button to immediately save

--- a/popup.html
+++ b/popup.html
@@ -44,6 +44,7 @@
     </div>
     <textarea id="urlList" placeholder="Enter URLs, one per line..."></textarea>
     <button id="saveButton">Save URLs</button>
+    <button id="saveNowButton">Save Request Now</button>
     <script src="popup.js"></script>
 </body>
 </html>
