--- a/popup.html
+++ b/popup.html
@@ -1,27 +1,39 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Request Capture</title>
     <style>
+        .container {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            /* Space between elements */
+        }
+
         body {
             width: 500px;
             height: 400px;
             padding: 10px;
             font-family: Arial, sans-serif;
         }
+
         .toggle-container {
             display: flex;
             align-items: center;
         }
+
         label {
             margin-left: 8px;
             font-size: 14px;
         }
+
         .message {
             margin-top: 10px;
             font-size: 12px;
             color: #555;
         }
+
         textarea {
             width: 100%;
             height: 240px;
@@ -29,22 +41,34 @@
             font-family: Arial, sans-serif;
             font-size: 12px;
         }
+
         button {
+            margin-top: 10px;
+        }
+
+        .timer {
+            font-size: 16px;
             margin-top: 10px;
         }
     </style>
 </head>
+
 <body>
     <div class="toggle-container">
         <input type="checkbox" id="captureSwitch" />
         <label for="captureSwitch">Capture Requests</label>
     </div>
     <div class="message">
-        URLs to monitor must each be on a new line. These are URL prefixes that will be matched against the start of each request URL.
+        URLs to monitor must each be on a new line. These are URL prefixes that will be matched against the start of
+        each request URL.
     </div>
     <textarea id="urlList" placeholder="Enter URLs, one per line..."></textarea>
     <button id="saveButton">Save URLs</button>
-    <button id="saveNowButton">Save Request Now</button>
+    <div class="container">
+        <div class="timer" id="timer">Time until next save: updating...</div>
+        <button class="save-button" id="saveNow">Save Now</button>
+    </div>
     <script src="popup.js"></script>
 </body>
+
 </html>
